@@ -1,4 +1,3 @@
 
 TODO:
-- fix drops
 - add localization support
