@@ -1,6 +1,7 @@
 
 1.1
 - player "sits" on horse if player_api mod is available
+- fixed drops
 
 
 1.0
